--- a/compose.yml
+++ b/compose.yml
@@ -8,8 +8,8 @@ services:
       MYSQL_DATABASE: cafeman
       MYSQL_USER: coffee_user
       MYSQL_PASSWORD: coffee_password
-    ports:
-      - "3306:3306"
+    # ports:
+    #   - "3306:3306"
     volumes:
       - mysql_data:/var/lib/mysql
       - ./mysql-init:/docker-entrypoint-initdb.d
